fix container align

--- a/src/blocks/container-maxi/style.scss
+++ b/src/blocks/container-maxi/style.scss
@@ -2,7 +2,14 @@
     position: relative;
     margin-top: 0;
     margin-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
 
+    &__wrapper {
+        margin: auto;
+        width: 100%;
+    }
     &__container {
         margin-right: auto;
         margin-left: auto;
